# calculator

./: CMakeLists.txt  eval.cpp  eval.h  main.cpp  stack.cpp  stack.h  tests.cpp  token.cpp  token.h
